# flask-react

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_POLICY.md  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml
.github/: ISSUE_TEMPLATE.md
services/client/: Dockerfile  Dockerfile-dev  Dockerfile-prod  package-lock.json  package.json
services/client/public/: index.html
services/client/src/: index.js
services/client/src/components/: AddUser.jsx  userList.jsx
services/client/src/components/__tests__/: AddUser.test.jsx  UsersList.test.jsx
services/client/src/components/__tests__/__snapshots__/: AddUser.test.jsx.snap  UsersList.test.jsx.snap
services/nginx/: Dockerfile  dev.conf  prod.conf
services/users/: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-prod  entrypoint.sh  manage.py  pyproject.toml
services/users/migrations/versions/: 5a3de7793f8c_initial_db_migration_with_flask_migrate.py  ef3bc78388af_user_unique_fields_and_max_field_lengths.py
services/users/project/: __init__.py  config.py
services/users/project/api/: models.py  users.py
services/users/project/tests/: test_config.py  test_user_model.py  test_users.py  utils.py
