[tool.poetry]
name = "overdrive"
version = "0.1.0"
description = ""
authors = ["John Martin <johnny@iamjohnnym.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.0"
flask_sqlalchemy = "^2.3"
flask-testing = "^0.7.1"
psycopg2 = "^2.7"
gunicorn = "^19.9"
flask-cors = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
coverage = "^4.5"
flake8 = "^3.6"
bandit = "^1.5"
flask-debugtoolbar = "^0.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
